# ma-realms

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml  release-ma-agent.yaml  release-ma-world.yaml
actor/: .cid  .gitignore  Cargo.toml  Makefile  README.md  TODO.md
actor/src/: lib.rs
actor/www/: alias.js  app.js  cbor.js  closet.js  dialog-writer.js  did.js  dom-env-utils.js  dot-commands.js  editor.js  gateway-client.js  here.js  identity-store.js  identity.js  inbox-dispatcher.js  inbox-transport.js  inbox.js  index.html  language.js  local-commands.test.mjs  meta-poll.js  room.js  runtime-utils.js  show-meta-parsers.js  style.css  ui.js  version-utils.js  whisper-flow.js  world.alias-regression.test.mjs  world.js
agent/: AGENT_API_V1.md  Cargo.toml  MCP_SETUP.md  Makefile  TESTING.md  mcp.json
agent/src/: daemon.rs  main.rs  mcp_stdio.rs
agent/www/: index.html
bot/: Cargo.toml
bot/src/: main.rs
core/: .gitignore  Cargo.toml  Makefile  README.md  TODO.md
core/locales/en/: core.ftl
core/locales/nb-NO/: core.ftl
core/src/: addressing.rs  bootstrap_identity.rs  capability_acl.rs  closet_client.rs  closet_domain.rs  closet_policy.rs  command_syntax.rs  document_helpers.rs  domain.rs  gossip.rs  identity.rs  interfaces.rs  ipfs_publish.rs  iroh.rs  lib.rs  locale.rs  ma_fields.rs  object_runtime.rs  parser.rs  protocol.rs  reply.rs  requirements.rs  room_actor.rs  secure_fs.rs  ttl_cache.rs  util.rs
spec/: README.md  access-control-v1.md  avatar-presence-v1.yaml  did-ma-fields-format.md  ma-realm-capabilities-tree-v1.yaml  ma-realm-notation-acl-requirements-spec-v1.md
spec/schema-examples/: config.yaml
spec/schema-examples/authoring/: actor_registry.yaml  world_manifest.yaml
spec/schema-examples/authoring/actors/: lobby.yaml  world.yaml
world/: .gitignore  .lang_cid  Cargo.toml  Makefile  README.md
world/.github/workflows/: release-ma-world.yaml
world/doc/schema-examples/authoring/: world_root.yaml
world/lang/: en_UK.ftl  manifest.yaml  nb_NO.ftl
world/scripts/: publish-lang-map.sh  world-api.sh
world/src/: actor.rs  actor_web.rs  avatar_commands.rs  bootstrap.rs  content_validation.rs  ingress_handlers.rs  kubo.rs  lang.rs  ma_world_projection_fields.yaml  main.rs  main.rs.bak  room.rs  schema.rs  status.rs  world_core.rs  world_protocol.rs  world_startup.rs
world/www/: app.js  index.html  style.css
