[package]
name = "ma-actor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
tokio = { version = "1.37", features = ["io-util", "sync"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

did-ma = { package = "ma-did", version = "0.4" }
ma-core = { package = "ma-realms-core", path = "../core" }
blake3 = "1.8"

argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
base64 = "0.22"
cid = "0.11"
chacha20poly1305 = "0.10"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
bip39 = "2"
libp2p-identity = { version = "0.2", features = ["ed25519", "peerid", "rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
