[package]
name = "ma-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
chrono = "0.4"
hex = "0.4"
iroh = { version = "0.97.0" }
libp2p-identity = { version = "0.2", features = ["ed25519", "peerid", "rand"] }
ma-core = { package = "ma-realms-core", path = "../core" }
did-ma = { package = "ma-did", path = "../../did" }
reqwest = { version = "0.12", features = ["json", "multipart"] }
nanoid = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.37", features = ["full"] }
