[package]
name = "ma-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
iroh = { version = "0.97.0" }
libp2p-identity = { version = "0.2", features = ["ed25519", "peerid", "rand"] }
ma-core = { path = "../core" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
