[package]
name = "ma-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
did-ma = { package = "ma-did", path = "../../did" }
iroh = { version = "0.97.0" }
tokio = { version = "1.37", features = ["io-util"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libp2p-identity = { version = "0.2", features = ["ed25519", "peerid", "rand"] }
moka = { version = "0.12", features = ["sync"] }
