[package]
name = "ma-world"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
iroh = { version = "0.97.0" }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
anyhow = "1.0"
thiserror = "1.0"
did-ma = { package = "ma-did", path = "../../did" }
ma-core = { package = "ma-realms-core", path = "../core" }
reqwest = { version = "0.12", features = ["json", "multipart"] }
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }
base64 = "0.22"
rand = "0.8"
chacha20poly1305 = "0.10"
nanoid = "0.4"
argon2 = "0.5"
sha2 = "0.10"
tar = "0.4"
moka = { version = "0.12", features = ["sync"] }

[[bin]]
name = "ma-world"
path = "src/main.rs"
